# Theia

./: CMakeLists.txt  README  README.md  license.txt  license_script.sh
cmakeFindModules/: AddCompilerFlag.cmake  CheckCCompilerFlag.cmake  CheckCXXCompilerFlag.cmake  FindCVD.cmake  FindSSE.cmake  FindTheiaDependencies.cmake  OptimizeForArchitecture.cmake  OptimizeTheiaCompilerFlags.cmake  TheiaConfig.cmake.in  theia_macros.cmake
cmake_utils/: find_protobuf.cmake
data_loader/: CMakeLists.txt  README.txt  convert_bigsfm_to_binary.cc  load_big_sfm.cc  read_bigsfm_binary_file.cc  read_bigsfm_binary_file.h  read_bundler_file.cc  read_bundler_file.h  view_bigsfm_dataset.cc
experiments/: CMakeLists.txt  ncc_test.cc  read_image_matches.cc  sift_matches.pb.cc  sift_matches.pb.h  sift_matches.proto  sift_pairwise_matches.cc
image/: CMakeLists.txt  image.h  image_canvas.cc  image_canvas.h  image_test.cc
image/descriptor/: CMakeLists.txt  brisk_descriptor.cc  brisk_descriptor.h  brisk_descriptor_test.cc  descriptor.h  descriptor.pb.cc  descriptor.pb.h  descriptor.proto  descriptor_extractor.cc  descriptor_extractor.h  freak_descriptor.cc  freak_descriptor.h  freak_descriptor_test.cc  patch_descriptor.cc  patch_descriptor.h  patch_descriptor_test.cc  sift_descriptor.cc  sift_descriptor.h  sift_descriptor_test.cc
image/keypoint_detector/: CMakeLists.txt  agast_detector.cc  agast_detector.h  agast_detector_test.cc  brisk_detector.cc  brisk_detector.h  brisk_detector_test.cc  brisk_helper.cc  brisk_helper.h  brisk_impl.cc  brisk_impl.h  fast_detector.cc  fast_detector.h  fast_detector_test.cc  harris_detector.cc  harris_detector.h  harris_detector_test.cc  keypoint.cc  keypoint.h  keypoint.pb.cc  keypoint.pb.h  keypoint.proto  keypoint_detector.h  sift_detector.cc  sift_detector.h  sift_detector_test.cc
libraries/: CMakeLists.txt
math/: CMakeLists.txt  closed_form_polynomial_solver.cc  closed_form_polynomial_solver.h  closed_form_polynomial_solver_test.cc  distribution.h  normalized_cross_correlation.h  polynomial.cc  polynomial.h  polynomial_test.cc  util.h
math/matrix/: CMakeLists.txt  gauss_jordan.h  gauss_jordan_test.cc
math/probability/: CMakeLists.txt  anderson_darling.cc  anderson_darling.h  anderson_darling_test.cc  kolmogorov_smirnoff.cc  kolmogorov_smirnoff.h  kolmogorov_smirnoff_test.cc  sequential_probability_ratio.cc  sequential_probability_ratio.h  sprt_test.cc
solvers/: CMakeLists.txt  arrsac.cc  arrsac.h  (+23 more)
src/theia/: CMakeLists.txt
src/theia/alignment/: alignment.h
src/theia/data_loader/: read_bigsfm_binary_file.cc  read_bigsfm_binary_file.h  read_bundler_file.cc  read_bundler_file.h
src/theia/image/: image.h  image_canvas.cc  image_canvas.h  image_test.cc
src/theia/image/descriptor/: brisk_descriptor.cc  brisk_descriptor.h  brisk_descriptor_test.cc  descriptor.h  descriptor_extractor.cc  descriptor_extractor.h  freak_descriptor.cc  freak_descriptor.h  freak_descriptor_test.cc  patch_descriptor.cc  patch_descriptor.h  patch_descriptor_test.cc  sift_descriptor.cc  sift_descriptor.h  sift_descriptor_test.cc
src/theia/image/keypoint_detector/: agast_detector.cc  agast_detector.h  agast_detector_test.cc  brisk_detector.cc  brisk_detector.h  brisk_detector_test.cc  brisk_impl.cc  brisk_impl.h  fast_detector.cc  fast_detector.h  fast_detector_test.cc  harris_detector.cc  harris_detector.h  harris_detector_test.cc  keypoint.h  keypoint_detector.h  sift_detector.cc  sift_detector.h  sift_detector_test.cc
src/theia/math/: closed_form_polynomial_solver_test.cc  normalized_cross_correlation.h  polynomial.cc  polynomial.h  polynomial_test.cc  util.h
src/theia/math/probability/: kolmogorov_smirnoff.cc  kolmogorov_smirnoff.h  kolmogorov_smirnoff_test.cc  sprt_test.cc
src/theia/solvers/: arrsac.h  arrsac_test.cc  estimator.h  inlier_support.h  mle_quality_measurement.h  mlesac.h  mlesac_test.cc  prosac.h  prosac_sampler.h  prosac_test.cc  quality_measurement.h  random_sampler.h  ransac.h  ransac_test.cc  sample_consensus_estimator.h
src/theia/test/: benchmark.h  test_main.cc  test_utils.h
src/theia/util/: map_util.h  random.cc  random.h  util.h
src/theia/vision/matching/: brute_force_matcher.h  distance.h  distance_hamming.h  distance_test.cc  image_matcher.h  matcher.h
src/theia/vision/pose/: dls_impl.cc  dls_impl.h  dls_pnp.cc  dls_pnp.h  dls_pnp_test.cc  five_point_relative_pose.cc  five_point_relative_pose.h  five_point_relative_pose_test.cc  perspective_three_point.cc  perspective_three_point.h  perspective_three_point_test.cc  util.cc  util.h
src/theia/vision/sfm/: projection_matrix.cc  projection_matrix.h
src/theia/vision/sfm/camera/: camera.h  camera_pose.cc  camera_pose.h  camera_pose_test.cc
src/theia/vision/sfm/pose/: dls_impl.cc  dls_impl.h  dls_pnp.cc  dls_pnp.h  dls_pnp_test.cc  dls_similarity_transform.cc  dls_similarity_transform.h  dls_similarity_transform_test.cc  eight_point_fundamental_matrix.cc  eight_point_fundamental_matrix.h  eight_point_fundamental_matrix_test.cc  five_point_focal_length_radial_distortion.cc  five_point_focal_length_radial_distortion.h  five_point_focal_length_radial_distortion_test.cc  five_point_relative_pose.cc  five_point_relative_pose.h  five_point_relative_pose_test.cc  four_point_focal_length.cc  four_point_focal_length.h  four_point_focal_length_helper.cc  four_point_focal_length_helper.h  four_point_focal_length_test.cc  four_point_homography.cc  four_point_homography.h  four_point_homography_test.cc  perspective_three_point.cc  perspective_three_point.h  perspective_three_point_test.cc  util.cc  util.h
src/theia/vision/sfm/triangulation/: triangulation.cc  triangulation.h  triangulation_test.cc
src/theia/vision/transformation/: align_point_clouds.cc  align_point_clouds.h  align_point_clouds_test.cc
src/theia/vision/triangulation/: triangulation.cc  triangulation.h  triangulation_test.cc
tutorials/: CMakeLists.txt  extract_brisk_descriptors.cc  extract_freak_descriptors.cc  extract_sift_descriptors.cc  match_brisk_descriptors.cc  match_freak_descriptors.cc  match_sift_descriptors.cc
(+152 files in other folders)
