# ADD_EXECUTABLE(extract_sift_descriptors extract_sift_descriptors.cc)
# TARGET_LINK_LIBRARIES(extract_sift_descriptors theia ${GFLAGS_LIBRARIES})

# ADD_EXECUTABLE(extract_freak_descriptors extract_freak_descriptors.cc)
# TARGET_LINK_LIBRARIES(extract_freak_descriptors theia ${GFLAGS_LIBRARIES})

# ADD_EXECUTABLE(match_sift_descriptors match_sift_descriptors.cc)
# TARGET_LINK_LIBRARIES(match_sift_descriptors theia ${GFLAGS_LIBRARIES})

# ADD_EXECUTABLE(match_freak_descriptors match_freak_descriptors.cc)
# TARGET_LINK_LIBRARIES(match_freak_descriptors theia ${GFLAGS_LIBRARIES})
